--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Construction, Yuktha Constructions, Hyderabad Real Estate, Telangana Real Estate, Property Development, Real Estate Development, Best Construction Company in Hyderabad, Best Contractor in Hyderabad, Excavation Services, Property Consultation, Road Construction, Vijay Sampangi, Nirmaankara, Kikiclick Ads, High-Quality Construction, Contractor in Hyderabad, Telangana Property Development, Kalamitra" />    <title>Vijay Sampangi</title>
+    <meta name="keywords" content="Chairman of Yuktha Constructions, Chairman of Wingherry Technologies, Yuktha Earth Movers Machinery Works, Testegg Software Pvt Ltd, Apollo Hospitals Jubilee hills, MIBM GLOBAL MBA, Mithra Events, Biachri ,Construction, Yuktha Constructions, Hyderabad Real Estate, Telangana Real Estate, Property Development, Real Estate Development, Best Construction Company in Hyderabad, Best Contractor in Hyderabad, Excavation Services, Property Consultation, Road Construction, Vijay Sampangi, Nirmaankara, Kikiclick Ads, High-Quality Construction, Contractor in Hyderabad, Kalamitra, S.P.Bala Subrahmanyam, Basavatarakam Indo American Cancer Hospital & Research Institute, " />    
+    <title>Vijay Sampangi</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/maincontent.css">
     <link rel="stylesheet" href="../css/slider.css">
@@ -54,7 +55,7 @@
                         <div id="hello">Hello, I'm</div>
                         <div id="vijay">Vijay Sampangi</div>
                         <div id="chairman">Chairman of Yuktha Constructions</div>
-                        <div id="chairman-desc">As a co-founder of Yuktha Constructions, I’m proud to lead a company dedicated to delivering high-quality residential, commercial, and industrial projects. We specialize in construction, interior design, smart home solutions, and eco-friendly installations like solar systems. With a focus on quality, timely delivery, and customer satisfaction, we’re creating innovative spaces where people and businesses thrive.</div>
+                        <div id="chairman-desc">As a co-founder of Yuktha Constructions, I'm proud to lead a company dedicated to delivering high-quality residential, commercial, and industrial projects. We specialize in construction, interior design, smart home solutions, and eco-friendly installations like solar systems. With a focus on quality, timely delivery, and customer satisfaction, we're creating innovative spaces where people and businesses thrive.</div>
                         <div id="getintouchbtn" class="btn">Get in Touch</div>
                     </div>
                     <div class="curl-arrow">
@@ -198,7 +199,7 @@
                                             <img src="../assets/wingherry-logo.svg" alt="">
                                         </div>
                                         <div class="exp-content">
-                                            <div class="exp-head">Wingherry Technologies</div>
+                                            <div class="exp-head">Wingherry Technologies Pvt Ltd</div>
                                         </div>
                                     </div>
                                     <div class="exp-content">
@@ -245,7 +246,7 @@
                                             <img src="../assets/indo.jpg" alt="">
                                         </div>
                                         <div class="exp-content">
-                                            <div class="exp-head">Basavatarakam Indo Hospital</div>
+                                            <div class="exp-head">Basavatarakam Indo American Cancer Hospital & Research Institute</div>
                                         </div>
                                     </div>
                                     <div class="exp-content">
@@ -442,9 +443,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content ex-para">
-                                        <div class="exp-para">University : MIBM Global is approved & accredited by United Kingdom Accreditation Service. The United Kingdom Accreditation Service is the sole national accreditation body recognized by the British government to assess the competence of organizations that provide certification, testing, inspection and calibration services
-                                            with overall work experience of 12 yrs
-                                        </div>
+                                        <div class="exp-para">University : MIBM Global </div>
                                     </div>
                                 </div>
                                 
@@ -458,7 +457,7 @@
                 <div class="content-holder-box">
                     <div class="content-headings">
                         <div class="lines"></div>
-                        <div class="content-holder-heading">Skills</div>
+                        <div class="content-holder-heading">Highlights</div>
                         <div class="lines line"></div>
                     </div>
                     <div class="skill-box-holder">
