--- a/html/index.html
+++ b/html/index.html
@@ -250,7 +250,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content">
-                                        <div class="exp-para subhead">Billing Executive , Public Relation Officer & Public Relation Officer (March 2014 - November 2015)</div>
+                                        <div class="exp-para subhead">Billing Executive , Corporate Relation Officer & Public Relation Officer (March 2014 - November 2015)</div>
                                         <div class="exp-para">I Have worked in Basavatarakam Indo American Cancer Hospital & Research Institute as a Billing Executive in Corporate Relations and Public Relation Officer.</div>
                                     </div>
                                 </div>
@@ -268,7 +268,7 @@
                             <div class="hidden-details" id="details-indo" style="display: none;">
                               <div class="sidehide-header">
                                   <h3 class="sidehide-title">Basavatarakam Indo American Cancer Hospital & Research Institute</h3>
-                                  <h4 class="sidehide-subtitle">Billing Executive & Public Relation Officer (March 2014 - November 2015)</h4>
+                                  <h4 class="sidehide-subtitle">Billing Executive , Corporate Relation Officer & Public Relation Officer (March 2014 - November 2015)</h4>
                               </div>
                               <div class="sidehidescroll">
                                   <p class="sidehide-description">
@@ -348,7 +348,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content ex-para">
-                                        <div class="exp-para subhead">Front Office Executive (2008 - 2010)</div>
+                                        <div class="exp-para subhead">Front Office Executive (2007 - 2010)</div>
                                         <div class="exp-para">At Apollo Hospitals, Hyderabad, I managed front desk operations, ensuring a welcoming environment and delivering excellent patient support.</div>
                                     </div>
                                 </div>
@@ -793,7 +793,7 @@
                             </div>
                             <div class="association-box">
                                 <img src="../assets/telanganalogo.png" alt="">
-                                <div>Telangana Contarctors Association <span>Member</span></div>
+                                <div>Telangana Contractors Association <span>Member</span></div>
                             </div>
                             <div class="association-box">
                                 <img src="../assets/mitra-evemts.png" alt="">
