--- a/html/index.html
+++ b/html/index.html
@@ -535,7 +535,7 @@
                             <span class="year">2014</span>
                           </div>
                         </div>
-                        <div class="certification">
+                        <div class="certification" id="middle-certification">
                           <div class="certificate-header">
                             <span class="cer-head">DTP (Desktop Publishing) Certification</span>
                             <span class="year">2003</span>
