--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Chairman of Yuktha Constructions, Chairman of Wingherry Technologies, Yuktha Earth Movers Machinery Works, Testegg Software Pvt Ltd, Apollo Hospitals Jubilee hills, MIBM GLOBAL MBA, Mithra Events, Biachri ,Construction, Yuktha Constructions, Hyderabad Real Estate, Telangana Real Estate, Property Development, Real Estate Development, Best Construction Company in Hyderabad, Best Contractor in Hyderabad, Excavation Services, Property Consultation, Road Construction, Vijay Sampangi, Nirmaankara, Kikiclick Ads, High-Quality Construction, Contractor in Hyderabad, Kalamitra, S.P.Bala Subrahmanyam, Basavatarakam Indo American Cancer Hospital & Research Institute, " />    
+    <meta name="keywords" content="Chairman of Yuktha Constructions,Yuktha Constructions/media,Vijay Sampangi/Qualifications,Vijay Sampangi/Certifications and Awards,Sell and Buy open flats, Sell and Buy Apartments,Buy and Sell Villas,Chairman of Wingherry Technologies, Yuktha Earth Movers Machinery Works, Testegg Software Pvt Ltd, Apollo Hospitals Jubilee hills,MIBM UK GLOBAL MBA,Mithra Events,Biachri ,Construction, Yuktha Constructions,Hyderabad Real Estate,Affordable Real Estate, Property Development,Real Estate Development, Best Construction Company in Hyderabad,Best Contractor in Hyderabad, Excavation Services,Property Consultation, Road Construction, Vijay Sampangi, Nirmaankara,Kikiclick Ads,High-Quality Construction,Contractor in Hyderabad,Kalamitra, S.P.Bala Subrahmanyam,Basavatarakam Indo American Cancer Hospital & Research Institute,Certified Technicians,Qualified Electrictians,Qualified Mestries,Qualified /Supervisor, Qualified /Centring,Yuktha Highlights, Wingherry Highlights,+18 years of Experience,Get in Touch,9985752406,Yuktha Constructions CEO Vijay on Hyderabad Real Estate Insights,Unknown Facts About Constructions by Vijay Sampangi,Project Briefing at Phase 5, Moosapet: Ensuring Clarity and Collaboration,Remembering S.P.Bala Subrahmanyam: A Tribute on the 4th Death Anniversary,Promoting a Safe Environment: IHRA Anti-Ragging Awareness Program,Auspicious Beginning: Site Pooja Ceremony at Isnapur,Formalizing Progress: Project Agreement Signing for Raidurgam at Gachibowli,Strengthening Progress: Vijay-Shree Project Agreement at Isnapur,Collaborative Milestone: Agreement with Telugu Cine Stunt Director at Indranagar,Strategic Deal: Agreement Between Brahmmas Agro Industries & Yuktha Earth Movers, Realtor Hyderabad, Realtor Andra Pradesh, Realtor Telangana, Realtor Karnaraka, Realtor Tamil Nadu, Realtor in Bangalore, Chat with your own realtor " />    
+    <meta name="author" content="Vijay Sampangi">
     <title>Vijay Sampangi</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/maincontent.css">
@@ -155,7 +156,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content">
-                                        <div class="exp-para subhead">Co-Founder (2018-Till Date)</div>
+                                        <div class="exp-para subhead">Co-Founder : 2018-Till Date</div>
                                         <div class="exp-para">
                                             Handled over 150+ projects in all fields of civil constructions</div>
                                     </div>
@@ -174,7 +175,7 @@
                             <div class="hidden-details" id="details-yuktha" style="display: none;">
                               <div class="sidehide-header">
                                   <h3 class="sidehide-title">Yuktha Constructions & Yuktha Earth Movers Machinery Works</h3>
-                                  <h4 class="sidehide-subtitle">Co-Founder (2018-Till Date)</h4>
+                                  <h4 class="sidehide-subtitle">Co-Founder : 2018-Till Date</h4>
                               </div>
                               <div class="sidehidescroll">
                                   <p class="sidehide-description">
@@ -203,7 +204,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content">
-                                        <div class="exp-para subhead">Chairman (2015-Till Date)</div>
+                                        <div class="exp-para subhead">Chairman : 2015-Till Date</div>
                                         <div class="exp-para">
                                             30+ software projects for Hospitals, 250+ Clients in all over the globe</div>
                                     </div>
@@ -220,7 +221,7 @@
                             <div class="hidden-details" id="details-wing" style="display: none;">
                               <div class="sidehide-header">
                                   <h3 class="sidehide-title">Wingherry Technologies Pvt Ltd</h3>
-                                  <h4 class="sidehide-subtitle">Chairman (2015-Till Date)</h4>
+                                  <h4 class="sidehide-subtitle">Chairman : 2015-Till Date</h4>
                               </div>
                               <div class="sidehidescroll">
                                   <p class="sidehide-description">
@@ -250,7 +251,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content">
-                                        <div class="exp-para subhead">Billing Executive , Corporate Relation Officer & Public Relation Officer (March 2014 - November 2015)</div>
+                                        <div class="exp-para subhead">Billing Executive , Corporate Relation Officer & Public Relation Officer : March 2014 - November 2015</div>
                                         <div class="exp-para">I Have worked in Basavatarakam Indo American Cancer Hospital & Research Institute as a Billing Executive in Corporate Relations and Public Relation Officer.</div>
                                     </div>
                                 </div>
@@ -268,7 +269,7 @@
                             <div class="hidden-details" id="details-indo" style="display: none;">
                               <div class="sidehide-header">
                                   <h3 class="sidehide-title">Basavatarakam Indo American Cancer Hospital & Research Institute</h3>
-                                  <h4 class="sidehide-subtitle">Billing Executive , Corporate Relation Officer & Public Relation Officer (March 2014 - November 2015)</h4>
+                                  <h4 class="sidehide-subtitle">Billing Executive , Corporate Relation Officer & Public Relation Officer : March 2014 - November 2015</h4>
                               </div>
                               <div class="sidehidescroll">
                                   <p class="sidehide-description">
@@ -299,8 +300,8 @@
                                         </div>
                                     </div>
                                     <div class="exp-content">
-                                        <div class="exp-para subhead">Sales Manager (April 2010 - February 2014)</div>
-                                        <div class="exp-para">As Sales Manager at Testegg Software Pvt Ltd, I spearheaded sales initiatives aimed at bridging the gap between educators and students through innovative software solutions. 
+                                        <div class="exp-para subhead">Business Head : April 2010 - February 2014</div>
+                                        <div class="exp-para">As Business Head at Testegg Software Pvt Ltd, I spearheaded sales initiatives aimed at bridging the gap between educators and students through innovative software solutions. 
                                         </div>
                                     </div>
                                 </div>
@@ -316,11 +317,11 @@
                             <div class="hidden-details" id="details-testegg" style="display: none;">
                               <div class="sidehide-header">
                                   <h3 class="sidehide-title">Testegg Software Pvt Ltd</h3>
-                                  <h4 class="sidehide-subtitle">Sales Manager (April 2010 - February 2014)</h4>
+                                  <h4 class="sidehide-subtitle">Business Head : April 2010 - February 2014</h4>
                               </div>
                               <div class="sidehidescroll">
                                   <p class="sidehide-description">
-                                      As Sales Manager at Testegg Software Pvt Ltd (April 2010 - February 2014), I spearheaded sales initiatives aimed at bridging the gap between educators and students through innovative software solutions.
+                                      As Business Head at Testegg Software Pvt Ltd : April 2010 - February 2014, I spearheaded sales initiatives aimed at bridging the gap between educators and students through innovative software solutions.
                                   </p>
                                   <ul class="sidehide-tasks">
                                       <li><strong>Driving Sales Efforts:</strong> Developed and executed strategies to promote the company’s products and services to educational institutions.</li>
@@ -348,7 +349,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-content ex-para">
-                                        <div class="exp-para subhead">Front Office Executive (2007 - 2010)</div>
+                                        <div class="exp-para subhead">Front Office Executive : 2007 - 2010</div>
                                         <div class="exp-para">At Apollo Hospitals, Hyderabad, I managed front desk operations, ensuring a welcoming environment and delivering excellent patient support.</div>
                                     </div>
                                 </div>
@@ -364,7 +365,7 @@
                             <div class="hidden-details" id="details-apollo" style="display: none;">
                                 <div class="sidehide-header">
                                   <h3 class="sidehide-title">Apollo Hospitals, Hyderabad</h3>
-                                  <h4 class="sidehide-subtitle">Front Office Executive (2007 - 2010)</h4>
+                                  <h4 class="sidehide-subtitle">Front Office Executive : 2007 - 2010</h4>
                                 </div>
                                 <div class="sidehidescroll">
                                     <p class="sidehide-description">
